--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^3.9.0",
     "react-page-scroller": "^2.0.7-beta",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.1",
     "react-textfit": "^1.1.0"
