--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.3",
     "react-spinners": "^0.8.1",
-    "react-textfit": "^1.1.0"
+    "react-textfit": "^1.1.0",
+    "react-toast-notifications": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
